@@ -1,3 +1,8 @@
+2012-03-07  Jason Merrill  <jason@redhat.com>
+
+	PR c++/52521
+	* g++.dg/cpp0x/udlit-mangle.C: New.
+
 2012-03-04  Georg-Johann Lay  <avr@gjlay.de>
 
 	Backport from mainline r184894.
